# alt-text

./: .gitignore  README.md  empty_alt_text_sample.TXT  idep.sh  index.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pipy_release.yml
src/alt_text/: alt_text.py
src/alttext/: alttext.py  descengine.py  ocrengine.py
src/alttext/descengine/: bliplocal.py  descengine.py  googlevertexapi.py  replicateapi.py
src/alttext/langengine/: langengine.py  openaiapi.py  privategpt.py
src/alttext/ocrengine/: ocrengine.py  tesseract.py
tests/: automate.py  collect.py  downloadbooks.py  getbooks.py  test.py
tests/book_outputs/: ebook_120.txt  ebook_142.txt  ebook_15.txt  ebook_201.txt  ebook_203.txt  ebook_236.txt  ebook_376.txt  ebook_421.txt  ebook_423.txt  ebook_54.txt  ebook_580.txt  ebook_586.txt  ebook_76.txt  ebook_86.txt
tests/downloaded_books/120/: pg120-images.html
tests/downloaded_books/142/: pg142-images.html
tests/downloaded_books/15/: pg15-images.html
tests/downloaded_books/201/: pg201-images.html
tests/downloaded_books/203/: pg203-images.html
tests/downloaded_books/236/: pg236-images.html
tests/downloaded_books/376/: pg376-images.html
tests/downloaded_books/421/: pg421-images.html
tests/downloaded_books/423/: pg423-images.html
tests/downloaded_books/54/: pg54-images.html
tests/downloaded_books/580/: pg580-images.html
tests/downloaded_books/586/: pg586-images.html
tests/downloaded_books/76/: pg76-images.html
tests/downloaded_books/86/: pg86-images.html
