[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alttext"]

[project]
name = "alt-text"
version = "0.2.4"
authors = [
    { name = "Free Ebook Foundation", email = "eric@ebookfoundation.org" },
    { name = "Jack Byrne", email = "jbyrne4@stevens.edu" },
    { name = "David Cruz", email = "dcruz2@stevens.edu" },
    { name = "Jared Donnelly", email = "jdonnel3@stevens.edu" },
    { name = "Ethan Kleschinsky", email = "ekleschi@stevens.edu" },
    { name = "Tyler Lane", email = "tlane@stevens.edu" },
    { name = "Carson Lee", email = "clee27@stevens.edu" },
]
maintainers = [
    { name = "Eric Hellman", email = "eric@hellman.net" },
    { name = "David Cruz", email = "dcruz2@stevens.edu" },
]
description = "A package used for finding, generating, and setting alt-text for images in HTML and EPUB files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "EbookLib==0.18",
    "replicate==0.23.1",
    "google-cloud-aiplatform==1.36.0",
    "pytesseract==0.3.10",
    "openai==1.13.3",
]

[project.urls]
"Source" = "https://github.com/EbookFoundation/alt-text"
"PyPi" = "https://pypi.org/project/alt-text/"
"Free Ebook Foundation" = "https://ebookfoundation.org/"
